# remote-desk

./: CMakeLists.txt  main.cpp  player.cpp  try.cpp
capture/: capture_screen.cpp
play/: player.cpp
